--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "cra-typescript-example",
+  "name": "Todo list by react + TS + mobX ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
