--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Todo list by react + TS + mobX ",
   "version": "0.1.0",
+  "homepage": "https://sergeykagal.github.io/mind/",
   "private": true,
   "dependencies": {
     "@mui/material": "^5.9.2",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
