feat: add tests

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Todo list by react + TS + mobX ",
+  "name": "todo_list",
   "version": "0.1.0",
   "homepage": "https://sergeykagal.github.io/mind/",
   "private": true,
